--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,40 +25,97 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">C:/Users/Shanmugasundharam/Git/S2_Application/Selenium/src/main/java/Execution_Engine/Driver_Script.java</a></td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">0</td><td class="numi">0.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">C:/Users/Shanmugasundharam/GitHub/Automation_With_Selenium_Java/src/main/java/Execution_Engine/TestNG_Run.java</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">11.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr id="t1"><th colspan="5">C:/Users/Shanmugasundharam/Git/S2_Application/Selenium/src/main/java/Execution_Engine/Driver_Script.java &#8212; failed (configuration methods)</th></tr>
-<tr class="failedodd"><td>Execution_Engine.Driver_Script</td><td><a href="#m1"><b>BeforeTest</b>  </a></td><td class="numi">1</td><td>1741250782754</td><td class="numi">3</td></tr>
-<tr><th colspan="5">C:/Users/Shanmugasundharam/Git/S2_Application/Selenium/src/main/java/Execution_Engine/Driver_Script.java &#8212; skipped (configuration methods)</th></tr>
-<tr class="skippedodd"><td rowspan="6">Execution_Engine.Driver_Script</td><td><a href="#m2"><b>AfterSuite</b>  </a></td><td class="numi">1</td><td>1741250782781</td><td class="numi">0</td></tr><tr class="skippedodd"><td><a href="#m3"><b>BeforeMethod</b>  </a></td><td class="numi">1</td><td>1741250782778</td><td class="numi">0</td></tr><tr class="skippedodd"><td><a href="#m4"><b>AfterTest</b>  </a></td><td class="numi">1</td><td>1741250782780</td><td class="numi">0</td></tr><tr class="skippedodd"><td><a href="#m5"><b>BeforeClass</b>  </a></td><td class="numi">1</td><td>1741250782772</td><td class="numi">0</td></tr><tr class="skippedodd"><td><a href="#m6"><b>AfterClass</b>  </a></td><td class="numi">1</td><td>1741250782779</td><td class="numi">0</td></tr><tr class="skippedodd"><td><a href="#m7"><b>AfterMethod</b>  </a></td><td class="numi">1</td><td>1741250782779</td><td class="numi">0</td></tr>
-<tr><th colspan="5">C:/Users/Shanmugasundharam/Git/S2_Application/Selenium/src/main/java/Execution_Engine/Driver_Script.java &#8212; skipped</th></tr>
-<tr class="skippedodd"><td>Execution_Engine.Driver_Script</td><td><a href="#m8"><b>Initalization</b>  </a></td><td class="numi">1</td><td>1741250782778</td><td class="numi">0</td></tr>
+<tr id="t1"><th colspan="5">C:/Users/Shanmugasundharam/GitHub/Automation_With_Selenium_Java/src/main/java/Execution_Engine/TestNG_Run.java &#8212; failed</th></tr>
+<tr class="failedodd"><td>Execution_Engine.TestNG_Run</td><td><a href="#m1"><b>TestCase2</b>  </a></td><td class="numi">1</td><td>1741266721988</td><td class="numi">5196</td></tr>
+<tr><th colspan="5">C:/Users/Shanmugasundharam/GitHub/Automation_With_Selenium_Java/src/main/java/Execution_Engine/TestNG_Run.java &#8212; passed</th></tr>
+<tr class="passedodd"><td>Execution_Engine.TestNG_Run</td><td><a href="#m2"><b>TestCase1</b>  </a></td><td class="numi">1</td><td>1741266715917</td><td class="numi">6065</td></tr>
 </table>
-<h1>C:/Users/Shanmugasundharam/Git/S2_Application/Selenium/src/main/java/Execution_Engine/Driver_Script.java</h1>
-<h2 id="m1">Execution_Engine.Driver_Script:BeforeTest</h2>
+<h1>C:/Users/Shanmugasundharam/GitHub/Automation_With_Selenium_Java/src/main/java/Execution_Engine/TestNG_Run.java</h1>
+<h2 id="m1">Execution_Engine.TestNG_Run:TestCase2</h2>
 <div>
 <h3>Test Messages</h3>
-BeforeTest<br/>
+Test started: TestCase2<br/>
+Test started: TestCase2<br/>
+Browser Initailized<br/>
+Extracted Application URL from Property File<br/>
+Quitting the browser<br/>
+Test failed: TestCase2<br/>
+Failure reason: invalid selector: Unable to locate an element with the xpath expression  because of the following error:
+SyntaxError: Failed to execute 'evaluate' on 'Document': The string '' is not a valid XPath expression.
+  (Session info: chrome=133.0.6943.142)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#invalid-selector-exception
+Build info: version: '4.27.0', revision: 'd6e718d134'
+System info: os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '23.0.1'
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [bc2da23606fa58044bbde31010bfbd8c, findElement {value=, using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\SHANMU~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56972}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56972/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: bc2da23606fa58044bbde31010bfbd8c<br/>
+Calling takeScreenshot method<br/>
+Attempting to take screenshot for test: TestCase2<br/>
+Screenshot saved at: C:\Users\Shanmugasundharam\GitHub\Automation_With_Selenium_Java\test-output\ScreenShot\TestCase2_20250306_184207.png<br/>
+<a href='ScreenShot/TestCase2_20250306_184207.png'> <img src='ScreenShot/TestCase2_20250306_184207.png' height='100' width='100'/> </a><br/>
+Test failed: TestCase2<br/>
+Failure reason: invalid selector: Unable to locate an element with the xpath expression  because of the following error:
+SyntaxError: Failed to execute 'evaluate' on 'Document': The string '' is not a valid XPath expression.
+  (Session info: chrome=133.0.6943.142)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#invalid-selector-exception
+Build info: version: '4.27.0', revision: 'd6e718d134'
+System info: os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '23.0.1'
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [bc2da23606fa58044bbde31010bfbd8c, findElement {value=, using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\SHANMU~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56972}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56972/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: bc2da23606fa58044bbde31010bfbd8c<br/>
+Calling takeScreenshot method<br/>
+Attempting to take screenshot for test: TestCase2<br/>
+Screenshot saved at: C:\Users\Shanmugasundharam\GitHub\Automation_With_Selenium_Java\test-output\ScreenShot\TestCase2_20250306_184207.png<br/>
+<a href='ScreenShot/TestCase2_20250306_184207.png'> <img src='ScreenShot/TestCase2_20250306_184207.png' height='100' width='100'/> </a><br/>
 <h3>Failure</h3>
-<div class="stacktrace">java.io.FileNotFoundException: C:\Users\Shanmugasundharam\Git\S2_Application\Selenium\src\main\resources\Test_Data\Framework.properties (The system cannot find the path specified)
-	at java.base/java.io.FileInputStream.open0(Native Method)
-	at java.base/java.io.FileInputStream.open(FileInputStream.java:219)
-	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:159)
-	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:112)
-	at ReUsable_Codes.Reusable_Library.Get_Value_From_Property_File(Reusable_Library.java:28)
-	at Utilities.Excel_Utilities.Excel_Testcases(Excel_Utilities.java:33)
-	at Execution_Engine.Driver_Script.BeforeTest(Driver_Script.java:35)
+<div class="stacktrace">org.openqa.selenium.InvalidSelectorException: invalid selector: Unable to locate an element with the xpath expression  because of the following error:
+SyntaxError: Failed to execute &apos;evaluate&apos; on &apos;Document&apos;: The string &apos;&apos; is not a valid XPath expression.
+  (Session info: chrome=133.0.6943.142)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#invalid-selector-exception
+Build info: version: &apos;4.27.0&apos;, revision: &apos;d6e718d134&apos;
+System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [bc2da23606fa58044bbde31010bfbd8c, findElement {value=, using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\SHANMU~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56972}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56972/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: bc2da23606fa58044bbde31010bfbd8c
+	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:501)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:485)
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:545)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:368)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:362)
+	at org.openqa.selenium.support.ui.ExpectedConditions$7.apply(ExpectedConditions.java:194)
+	at org.openqa.selenium.support.ui.ExpectedConditions$7.apply(ExpectedConditions.java:190)
+	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:203)
+	at ReUsable_Codes.Reusable_Library.Click_Element(Reusable_Library.java:103)
+	at ReUsable_Codes.Manage_Work_Space.Shot.Fetch_Show(Shot.java:14)
+	at Testcase.Create_New_Service_From_Shots.Create_New_Shot_From_Manage_Work_Shot_Screen(Create_New_Service_From_Shots.java:17)
+	at Config.Action_Keywords.TestSuite2(Action_Keywords.java:25)
+	at Execution_Engine.TestNG_Run.TestCase2(TestNG_Run.java:58)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.MethodInvocationHelper.invokeMethodConsideringTimeout(MethodInvocationHelper.java:59)
-	at org.testng.internal.Invoker.invokeConfigurationMethod(Invoker.java:458)
-	at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:222)
-	at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:142)
-	at org.testng.TestRunner.beforeRun(TestRunner.java:529)
-	at org.testng.TestRunner.run(TestRunner.java:497)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:648)
+	at org.testng.TestRunner.run(TestRunner.java:505)
 	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
 	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
 	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
@@ -74,50 +131,15 @@ BeforeTest<br/>
 </div>
 </div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">Execution_Engine.Driver_Script:AfterSuite</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">Execution_Engine.Driver_Script:BeforeMethod</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">Execution_Engine.Driver_Script:AfterTest</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">Execution_Engine.Driver_Script:BeforeClass</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">Execution_Engine.Driver_Script:AfterClass</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m7">Execution_Engine.Driver_Script:AfterMethod</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">Execution_Engine.Driver_Script:Initalization</h2>
+<h2 id="m2">Execution_Engine.TestNG_Run:TestCase1</h2>
 <div>
-<div class="stacktrace">java.io.FileNotFoundException: C:\Users\Shanmugasundharam\Git\S2_Application\Selenium\src\main\resources\Test_Data\Framework.properties (The system cannot find the path specified)
-	at java.base/java.io.FileInputStream.open0(Native Method)
-	at java.base/java.io.FileInputStream.open(FileInputStream.java:219)
-	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:159)
-	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:112)
-	at ReUsable_Codes.Reusable_Library.Get_Value_From_Property_File(Reusable_Library.java:28)
-	at Utilities.Excel_Utilities.Excel_Testcases(Excel_Utilities.java:33)
-	at Execution_Engine.Driver_Script.BeforeTest(Driver_Script.java:35)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.MethodInvocationHelper.invokeMethodConsideringTimeout(MethodInvocationHelper.java:59)
-	at org.testng.internal.Invoker.invokeConfigurationMethod(Invoker.java:458)
-	at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:222)
-	at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:142)
-	at org.testng.TestRunner.beforeRun(TestRunner.java:529)
-	at org.testng.TestRunner.run(TestRunner.java:497)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:65)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:105)
-</div>
+Test started: TestCase1<br/>
+Test started: TestCase1<br/>
+Browser Initailized<br/>
+Extracted Application URL from Property File<br/>
+Test Case Executed 1<br/>
+Test passed: TestCase1<br/>
+Test passed: TestCase1<br/>
 </div>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
