--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,14 +25,14 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">C:/Users/Shanmugasundharam/GitHub/Automation_With_Selenium_Java/src/main/java/Execution_Engine/TestNG_Run.java</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">11.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">C:/Users/Shanmugasundharam/GitHub/Automation_With_Selenium_Java/src/main/java/Execution_Engine/TestNG_Run.java</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">7.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr id="t1"><th colspan="5">C:/Users/Shanmugasundharam/GitHub/Automation_With_Selenium_Java/src/main/java/Execution_Engine/TestNG_Run.java &#8212; failed</th></tr>
-<tr class="failedodd"><td>Execution_Engine.TestNG_Run</td><td><a href="#m1"><b>TestCase2</b>  </a></td><td class="numi">1</td><td>1741266721988</td><td class="numi">5196</td></tr>
+<tr class="failedodd"><td>Execution_Engine.TestNG_Run</td><td><a href="#m1"><b>TestCase2</b>  </a></td><td class="numi">1</td><td>1741268367794</td><td class="numi">3521</td></tr>
 <tr><th colspan="5">C:/Users/Shanmugasundharam/GitHub/Automation_With_Selenium_Java/src/main/java/Execution_Engine/TestNG_Run.java &#8212; passed</th></tr>
-<tr class="passedodd"><td>Execution_Engine.TestNG_Run</td><td><a href="#m2"><b>TestCase1</b>  </a></td><td class="numi">1</td><td>1741266715917</td><td class="numi">6065</td></tr>
+<tr class="passedodd"><td>Execution_Engine.TestNG_Run</td><td><a href="#m2"><b>TestCase1</b>  </a></td><td class="numi">1</td><td>1741268364033</td><td class="numi">3754</td></tr>
 </table>
 <h1>C:/Users/Shanmugasundharam/GitHub/Automation_With_Selenium_Java/src/main/java/Execution_Engine/TestNG_Run.java</h1>
 <h2 id="m1">Execution_Engine.TestNG_Run:TestCase2</h2>
@@ -51,13 +51,13 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.27.0', revision: 'd6e718d134'
 System info: os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '23.0.1'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [bc2da23606fa58044bbde31010bfbd8c, findElement {value=, using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\SHANMU~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56972}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56972/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: bc2da23606fa58044bbde31010bfbd8c<br/>
+Command: [05c9cb8987763fe35dbf7b5209ece0d0, findElement {value=, using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\SHANMU~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:57676}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:57676/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 05c9cb8987763fe35dbf7b5209ece0d0<br/>
 Calling takeScreenshot method<br/>
 Attempting to take screenshot for test: TestCase2<br/>
-Screenshot saved at: C:\Users\Shanmugasundharam\GitHub\Automation_With_Selenium_Java\test-output\ScreenShot\TestCase2_20250306_184207.png<br/>
-<a href='ScreenShot/TestCase2_20250306_184207.png'> <img src='ScreenShot/TestCase2_20250306_184207.png' height='100' width='100'/> </a><br/>
+Screenshot saved at: test-output\ScreenShot\TestCase2_20250306_190931.png<br/>
+<a href='ScreenShot/TestCase2_20250306_190931.png'> <img src='ScreenShot/TestCase2_20250306_190931.png' height='100' width='100'/> </a><br/>
 Test failed: TestCase2<br/>
 Failure reason: invalid selector: Unable to locate an element with the xpath expression  because of the following error:
 SyntaxError: Failed to execute 'evaluate' on 'Document': The string '' is not a valid XPath expression.
@@ -66,13 +66,13 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.27.0', revision: 'd6e718d134'
 System info: os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '23.0.1'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [bc2da23606fa58044bbde31010bfbd8c, findElement {value=, using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\SHANMU~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56972}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56972/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: bc2da23606fa58044bbde31010bfbd8c<br/>
+Command: [05c9cb8987763fe35dbf7b5209ece0d0, findElement {value=, using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\SHANMU~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:57676}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:57676/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 05c9cb8987763fe35dbf7b5209ece0d0<br/>
 Calling takeScreenshot method<br/>
 Attempting to take screenshot for test: TestCase2<br/>
-Screenshot saved at: C:\Users\Shanmugasundharam\GitHub\Automation_With_Selenium_Java\test-output\ScreenShot\TestCase2_20250306_184207.png<br/>
-<a href='ScreenShot/TestCase2_20250306_184207.png'> <img src='ScreenShot/TestCase2_20250306_184207.png' height='100' width='100'/> </a><br/>
+Screenshot saved at: test-output\ScreenShot\TestCase2_20250306_190931.png<br/>
+<a href='ScreenShot/TestCase2_20250306_190931.png'> <img src='ScreenShot/TestCase2_20250306_190931.png' height='100' width='100'/> </a><br/>
 <h3>Failure</h3>
 <div class="stacktrace">org.openqa.selenium.InvalidSelectorException: invalid selector: Unable to locate an element with the xpath expression  because of the following error:
 SyntaxError: Failed to execute &apos;evaluate&apos; on &apos;Document&apos;: The string &apos;&apos; is not a valid XPath expression.
@@ -81,9 +81,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: &apos;4.27.0&apos;, revision: &apos;d6e718d134&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [bc2da23606fa58044bbde31010bfbd8c, findElement {value=, using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\SHANMU~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56972}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56972/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: bc2da23606fa58044bbde31010bfbd8c
+Command: [05c9cb8987763fe35dbf7b5209ece0d0, findElement {value=, using=xpath}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 133.0.6943.142, chrome: {chromedriverVersion: 133.0.6943.141 (2a5d6da0d61..., userDataDir: C:\Users\SHANMU~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:57676}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:57676/devtoo..., se:cdpVersion: 133.0.6943.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 05c9cb8987763fe35dbf7b5209ece0d0
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:501)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:485)
